# linxiaotu

./: .gitignore  README.md  WorkerService1.sln  check-uncommitted.sh  check_uncommitted.py  package-lock.json
.github/: copilot-instructions.md
.github/workflows/: check-uncommitted-changes.yml
HHH/: requirements.txt
HHH/docs/: api.md  architecture.md
Python-3.14.2/: README.md
QuantTradingSystem/: .gitignore  LICENSE  MANIFEST.in  QuantTradingSystem.spec  README.md  __init__.py  build.ps1  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py
QuantTradingSystem/config/: settings.py  settings.yaml.example
QuantTradingSystem/data/historical/: rb9999_demo.csv
QuantTradingSystem/frontend/: api_server.py  index.html
QuantTradingSystem/market_gateway/: __init__.py
QuantTradingSystem/market_gateway/core/: __init__.py  models.py
QuantTradingSystem/market_gateway/tests/: __init__.py  test_gateway_config.py  test_refactored_models.py  test_tick_data.py
QuantTradingSystem/scripts/: evaluate_strategies.py  run_historical_backtest.py  run_portfolio_demo.py  simulate_paper_trading.py
QuantTradingSystem/src/ai/: __init__.py  predictors.py  reinforcement.py  sentiment.py
QuantTradingSystem/src/backtest/: __init__.py  backtest_engine.py  optimizer.py
QuantTradingSystem/src/data/: __init__.py  data_manager.py  data_structures.py
QuantTradingSystem/src/execution/: __init__.py  auto_trader.py  execution_engine.py
QuantTradingSystem/src/risk/: __init__.py  risk_manager.py
QuantTradingSystem/src/strategy/: __init__.py  advanced_strategies.py  strategy_base.py
QuantTradingSystem/tests/: test_backtest.py  test_comprehensive_backtest.py
WorkerService1/: WorkerService1.csproj
ai-engineering-hub-main/chat-with-code/: README.md  validation.py
ai-engineering-hub-main/context-engineering-pipeline/: README.md
ai-engineering-hub-main/eyelevel-mcp-rag/: README.md
ai-engineering-hub-main/gpt-oss-vs-qwen3/: code_evaluation_opik.py
ai-engineering-hub-main/graphiti-mcp/: README.md
ai-engineering-hub-main/kitops-mcp/: prompt.txt  server.py  tools.py  util.py
ai-engineering-hub-main/minimaxm2-vs-sonnet4-5-vs-kimik2-vs-gemini3/: code_evaluation_opik.py
ai-engineering-hub-main/multiplatform_deep_researcher/: README.md  app.py  flow.py  output.md  research.py
awesome-cli-apps-master/: awesome-cli-apps-master - 快捷方式.lnk
context-engineering-for-claude-code/: QUICK_START.md  README.md  SUMMARY.md
docs/: AI_RULES_EN.md
docs/ai/en/: README.md  (+6 more)
quant-trading-system/: .gitignore  README.md  main.py  requirements.txt
(+49 files in other folders)
