[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-trading-system"
version = "1.0.0"
description = "高性能量化交易系统 - 支持中国期货市场，50%年化收益目标，多策略组合"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "QuantTrader", email = "quant@example.com"}
]
keywords = [
    "quantitative-trading",
    "futures",
    "algorithmic-trading",
    "backtesting",
    "risk-management",
    "ai-trading"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "torch>=1.12.0",
    "scikit-learn>=1.0.0",
    "fastapi>=0.85.0",
    "uvicorn>=0.18.0",
    "websockets>=10.0",
    "pydantic>=1.10.0",
    "plotly>=5.10.0",
    "matplotlib>=3.5.0",
    "python-dotenv>=0.20.0",
    "loguru>=0.6.0",
    "schedule>=1.1.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "pyarrow>=9.0.0",
    "redis>=4.0.0",
    "sqlalchemy>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
]
data = [
    "tqsdk>=3.0.0",
    "tushare>=1.2.0",
    "akshare>=1.0.0",
]
database = [
    "psycopg2-binary>=2.9.0",
    "influxdb-client>=1.30.0",
]
ai = [
    "transformers>=4.20.0",
]

[project.scripts]
quant = "main:main"

[project.urls]
"Homepage" = "https://github.com/yourusername/quant-trading-system"
"Bug Tracker" = "https://github.com/yourusername/quant-trading-system/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
